# NeMo-Flow

./: .coderabbit.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS-Node.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  codecov.yml  justfile  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.github/: ci-path-filters.yml  ci-tool-versions.env  nightly-alpha-branches.yaml
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-enhancement.yml
.github/workflows/: ci.yaml  ci_changes.yml  ci_check.yml  ci_docs.yml  ci_go.yml  ci_license_diff.yml  ci_node.yml  ci_openclaw.yml  ci_python.yml  ci_rust.yml  ci_wasm.yml  fern-docs.yml
crates/adaptive/: README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: banner.rs  completions_install.rs  config.rs  doctor.rs  error.rs  gateway.rs  installer.rs  json_path.rs  launcher.rs  main.rs  plugins.rs  server.rs  session.rs  setup.rs  tls.rs
crates/cli/src/adapters/: claude_code.rs  codex.rs  cursor.rs  hermes.rs  mod.rs
crates/cli/src/alignment/: claude_code.rs  mod.rs
crates/cli/src/plugin_shim/: codex.rs
crates/cli/src/plugins/: config_io.rs  editor_model.rs  lifecycle.rs
crates/cli/src/plugins/lifecycle/: responses.rs  state.rs  target.rs
crates/cli/src/setup/: model.rs
crates/cli/tests/: cli_tests.rs
crates/cli/tests/coverage/: adapters_tests.rs  alignment_claude_code_tests.rs  alignment_tests.rs  banner_tests.rs  completions_install_tests.rs  config_tests.rs  doctor_tests.rs  gateway_tests.rs  installer_tests.rs  launcher_tests.rs  main_tests.rs  plugins_lifecycle_target_tests.rs  plugins_lifecycle_tests.rs  plugins_tests.rs  server_tests.rs  session_tests.rs  setup_tests.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: config_editor.rs  json.rs  plugin.rs  registry.rs  shared_runtime.rs  stream.rs
crates/core/src/api/: event.rs  llm.rs  mod.rs  registry.rs  runtime.rs  scope.rs  shared.rs  subscriber.rs  tool.rs
crates/core/src/api/runtime/: callbacks.rs  scope_stack.rs  state.rs  subscriber_dispatcher.rs
crates/core/src/codec/: anthropic.rs  mod.rs  openai_chat.rs  openai_responses.rs  request.rs  resolve.rs  response.rs  streaming.rs  traits.rs
crates/core/src/context/: registries.rs
crates/core/src/observability/: atif.rs  atof.rs  manual.rs  mod.rs  openinference.rs  otel.rs  plugin_component.rs
crates/core/src/plugin/: dynamic.rs
crates/core/src/plugin/dynamic/: registry.rs  worker.rs
crates/core/src/plugins/nemo_guardrails/: component.rs  remote.rs
crates/core/tests/integration/: api_surface_tests.rs  atif_storage_tests.rs  middleware_tests.rs  native_plugin_tests.rs  pipeline_tests.rs  scope_local_tests.rs  stream_tests.rs  subscriber_dispatcher_tests.rs  worker_plugin_tests.rs
crates/core/tests/unit/: atif_tests.rs  context_tests.rs  dynamic_worker_tests.rs  llm_api_tests.rs  plugin_tests.rs  shared_tests.rs  tool_api_tests.rs  types_tests.rs
crates/core/tests/unit/codec/: openai_responses_tests.rs  resolve_tests.rs  response_tests.rs
crates/core/tests/unit/observability/: atof_tests.rs  manual_tests.rs  openinference_tests.rs  otel_tests.rs  plugin_component_tests.rs
crates/core/tests/unit/plugins/nemo_guardrails/: component_tests.rs  remote_tests.rs
crates/ffi/: Cargo.toml  README.md  nemo_flow.h  nemo_relay.h
crates/ffi/src/: callable.rs
crates/ffi/src/api/: llm_registry.rs  mod.rs  observability.rs  plugin.rs  scope.rs
crates/ffi/src/types/: mod.rs
crates/ffi/tests/integration/: api_tests.rs
crates/ffi/tests/unit/: api_tests.rs
crates/ffi/tests/unit/api/: core_tests.rs  registry_tests.rs
crates/node/: Cargo.toml  README.md  adaptive.d.ts  observability.d.ts  package.json  pii_redaction.d.ts  pii_redaction.js  pricing.js
crates/node/src/: callable.rs
crates/node/src/api/: mod.rs
crates/node/tests/: atof_tests.mjs  llm_tests.mjs  pii_redaction_tests.mjs  pricing_tests.mjs  scope_tests.mjs  tools_tests.mjs
crates/pii-redaction/: Cargo.toml  README.md
crates/pii-redaction/src/: builtin.rs  component.rs  detectors.rs  lib.rs  local.rs  overlay.rs
crates/pii-redaction/tests/unit/: component_tests.rs
crates/python/: Cargo.toml  README.md
crates/python/src/: lib.rs  py_callable.rs
crates/python/src/py_api/: mod.rs
crates/python/src/py_types/: mod.rs  observability.rs
crates/python/tests/coverage/: py_api_coverage_tests.rs  py_types_coverage_tests.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  plugin.rs
crates/types/src/api/: event.rs  llm.rs  mod.rs  scope.rs  tool.rs
crates/types/src/codec/: mod.rs  request.rs  response.rs
crates/types/tests/: serialization_tests.rs
crates/wasm/: Cargo.toml  README.md  package.json
crates/wasm/scripts/: normalize_coverage.mjs  prepare_pkg.mjs
crates/wasm/src/: callable.rs
crates/wasm/src/api/: mod.rs
crates/wasm/tests-js/: index_loader_tests.mjs  llm_tests.mjs  pii_redaction_tests.mjs  pricing_tests.mjs  scope_tests.mjs  tools_tests.mjs  types_tests.mjs
crates/wasm/tests/integration/: context_tests.rs  llm_tests.rs  scope_local_tests.rs  scope_tests.rs  tools_tests.rs
crates/wasm/tests/unit/: api_tests.rs
crates/wasm/wrappers/esm/: index.js  pii_redaction.js  pricing.d.ts  pricing.js
crates/wasm/wrappers/nodejs/: pricing.js
docs/: index.md  index.yml
docs/about/: ecosystem.md
docs/about-nemo-relay/: architecture.mdx  ecosystem.mdx  overview.mdx
docs/build-plugins/: about.md  about.mdx  advanced-configuration.md  basic-guide.md  nemoguardrails.md  nemoguardrails.mdx  plugin-configuration-files.md  plugin-configuration-files.mdx  register-behavior.md  validate-configuration.md
docs/contribute/: development-setup.md  development-setup.mdx  runtime-contract-docs.mdx  testing-and-docs.md  testing-and-docs.mdx
docs/export-observability-data/: about.md  basic-guide.md  code-examples.md
docs/getting-started/: configuration.md  configuration.mdx  installation.md  nodejs.md  prerequisites.md  prerequisites.mdx  quick-start.md  rust.md
skills/: README.md
(+268 files in other folders)
