# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "crates/core",
    "crates/adaptive",
    "crates/pii-redaction",
    "crates/cli",
    # Language Bindings
    "crates/python",
    "crates/ffi",
    "crates/node",
    "crates/wasm"
]
exclude = [".tmp", ".uv-cache"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/NVIDIA/NeMo-Relay"

[workspace.dependencies]
nemo-relay = { version = "0.4.0", path = "crates/core", default-features = false }
nemo-relay-adaptive = { version = "0.4.0", path = "crates/adaptive" }
nemo-relay-pii-redaction = { version = "0.4.0", path = "crates/pii-redaction" }
nemo-relay-ffi = { version = "0.4.0", path = "crates/ffi" }
nemo-relay-cli = { version = "0.4.0", path = "crates/cli" }
opentelemetry = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false }
uuid = "=1.18.1"

[workspace.lints.rust]
missing_docs = "deny"
