# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "crates/core",
    "crates/types",
    "crates/plugin",
    "crates/worker-proto",
    "crates/worker",
    "crates/adaptive",
    "crates/pii-redaction",
    "crates/cli",
    # Language Bindings
    "crates/python",
    "crates/ffi",
    "crates/node"
]
exclude = [".tmp", ".uv-cache"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/NVIDIA/NeMo-Relay"

[workspace.dependencies]
nemo-relay = { version = "0.5.0", path = "crates/core", default-features = false }
nemo-relay-types = { version = "0.5.0", path = "crates/types" }
nemo-relay-plugin = { version = "0.5.0", path = "crates/plugin" }
nemo-relay-worker-proto = { version = "0.5.0", path = "crates/worker-proto" }
nemo-relay-worker = { version = "0.5.0", path = "crates/worker" }
nemo-relay-adaptive = { version = "0.5.0", path = "crates/adaptive" }
nemo-relay-pii-redaction = { version = "0.5.0", path = "crates/pii-redaction" }
nemo-relay-ffi = { version = "0.5.0", path = "crates/ffi" }
nemo-relay-cli = { version = "0.5.0", path = "crates/cli" }
opentelemetry = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false }
uuid = "=1.18.1"

[workspace.lints.rust]
missing_docs = "deny"
