# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nemo-flow"
dynamic = ["version"]
description = "Python bindings for the NeMo Flow agent runtime."
readme = "python/nemo_flow/README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "NVIDIA Corporation & Affiliates" },
]
keywords = [
    "agents",
    "ai",
    "llm",
    "middleware",
    "nemo-flow",
    "observability",
    "runtime",
    "tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]

[project.urls]
Documentation = "https://nvidia.github.io/NeMo-Flow/"
Homepage = "https://github.com/NVIDIA/NeMo-Flow"
Issues = "https://github.com/NVIDIA/NeMo-Flow/issues"
Repository = "https://github.com/NVIDIA/NeMo-Flow"

[dependency-groups]
dev = [
    "ipython~=8.20",
    "maturin[zig]>=1.0,<2.0; sys_platform == 'linux'",
    "maturin>=1.0,<2.0; sys_platform != 'linux'",
    "pip-licenses>=5,<6",
    "pre-commit~=4.0",
    "ruff~=0.11",
    "ty>=0.0.1a7",
    "uv~=0.10.0",
]

test = [
    "pydantic>=2",
    "pytest>=8",
    "pytest-asyncio>=0.26",
    "pytest-cov~=7.0",
]

docs = [
    "myst-parser~=4.0",
    "nvidia-sphinx-theme~=0.0.9",
    "packaging>=24,<26",
    "sphinx>=8,<9",
    "sphinx-autoapi~=3.8",
    "sphinx-design~=0.6",
    "sphinx-js~=5.0",
    "sphinx-multiversion~=0.2",
    "sphinxcontrib-rust>=1.0,<1.1",
    "sphinxcontrib-mermaid~=1.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=1.3.0,<2.0.0",
    "langchain-core",
    "langgraph", # allow any compatible version
]

langgraph = [
    "nemo-flow[langchain]",
    "langgraph>=1.2.0,<2.0.0",
]

deepagents = [
    "nemo-flow[langgraph]",
    "deepagents>=0.5.3,<0.6.0",
]

langchain-nvidia = [
    "nemo-flow[langchain]",
    "langchain-nvidia-ai-endpoints~=1.0",
]

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
python-source = "python"
module-name = "nemo_flow._native"
features = ["pyo3/extension-module"]

[tool.maturin.sbom]
rust = true
auditwheel = true

[tool.uv]
default-groups = ["dev", "test"]
package = true

[tool.pytest.ini_options]
testpaths = ["python/tests", "third_party/langgraph_tests"]
asyncio_mode = "auto"

[tool.ty.analysis]
# nemo_flow._native is a compiled Rust extension (built by maturin) that only
# exists after `uv sync` / `pip install -e .`. Suppress unresolved-import for it.
# LangChain and LangGraph are optional integration dependencies which aren't installed by default.
allowed-unresolved-imports = ["langchain.**", "langchain_*.**", "langgraph.**", "nemo_flow._native", "pytest"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["nemo_flow"]
