# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nemo-relay"
dynamic = ["version"]
description = "Python bindings for the NeMo Relay agent runtime."
readme = "python/nemo_relay/README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "NVIDIA Corporation & Affiliates" },
]
keywords = [
    "agents",
    "ai",
    "llm",
    "middleware",
    "nemo-relay",
    "observability",
    "runtime",
    "tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]

[project.urls]
Documentation = "https://nvidia-nemo-relay.docs.buildwithfern.com/nemo-relay"
Homepage = "https://github.com/NVIDIA/NeMo-Relay"
Issues = "https://github.com/NVIDIA/NeMo-Relay/issues"
Repository = "https://github.com/NVIDIA/NeMo-Relay"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14,<5",
    "ipython~=8.20",
    "maturin[zig]>=1.0,<2.0; sys_platform == 'linux'",
    "maturin>=1.0,<2.0; sys_platform != 'linux'",
    "pip-licenses>=5,<6",
    "pre-commit~=4.0",
    "ruff~=0.11",
    "ty>=0.0.1a7",
    "uv~=0.10.0",
]

test = [
    "pydantic>=2",
    "pytest>=8",
    "pytest-asyncio>=0.26",
    "pytest-cov~=7.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=1.3.4,<2.0.0",
    "langchain-core",
    "langgraph", # allow any compatible version
]

langgraph = [
    "nemo-relay[langchain]",
    "langgraph>=1.2.2,<2.0.0",
]

deepagents = [
    "nemo-relay[langgraph]",
    "deepagents>=0.5.3,<0.6.0",
]

langchain-nvidia = [
    "nemo-relay[langchain]",
    "langchain-nvidia-ai-endpoints>=1.4.1,<2.0.0",
]

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
python-source = "python"
module-name = "nemo_relay._native"
features = ["pyo3/extension-module"]

[tool.maturin.sbom]
rust = true
auditwheel = true

[tool.uv]
default-groups = ["dev", "test"]
package = true

[tool.pytest.ini_options]
testpaths = ["python/tests", "third_party/langgraph_tests"]
asyncio_mode = "auto"

[tool.coverage.run]
# Exclude integration tests from coverage, since we don't run these by default
omit = ["python/nemo_relay/integrations/*"]

[tool.ty.analysis]
# nemo_relay._native is a compiled Rust extension (built by maturin) that only
# exists after `uv sync` / `pip install -e .`. Suppress unresolved-import for it.
# LangChain, LangGraph, and Deep Agents are optional integration dependencies
# which aren't installed by default.
allowed-unresolved-imports = ["deepagents.**", "langchain.**", "langchain_*.**", "langgraph.**", "nemo_relay._native", "pytest"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["nemo_relay"]
