# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Rust SDK for NeMo Flow observability, scope management, and runtime instrumentation."
readme = "README.md"

[lints]
workspace = true

[features]
default = ["otel", "openinference"]
schema = ["dep:schemars"]
otel = [
    "dep:async-trait",
    "dep:getrandom",
    "dep:js-sys",
    "dep:opentelemetry",
    "dep:opentelemetry-http",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:reqwest",
    "dep:rustls",
    "dep:tonic",
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]
openinference = [
    "dep:async-trait",
    "dep:getrandom",
    "dep:js-sys",
    "dep:openinference-semantic-conventions",
    "dep:opentelemetry",
    "dep:opentelemetry-http",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:reqwest",
    "dep:rustls",
    "dep:tonic",
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]

[dependencies]
uuid = { workspace = true, features = ["v7", "serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
schemars = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync"] }
tokio-stream = { version = "0.1", default-features = false }
typed-builder = "0.23.2"
opentelemetry = { version = "0.31", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace"], optional = true }
openinference-semantic-conventions = { version = "0.1.1", optional = true }
async-trait = { version = "0.1", optional = true }
getrandom = { version = "0.3.4", features = ["wasm_js"], optional = true }
js-sys = { version = "0.3", optional = true }
opentelemetry-http = { version = "0.31", default-features = false, optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "Response", "Window", "console"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "test-util", "rt-multi-thread"] }
futures = "0.3"
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "testing"] }
serde_json = "1"

[[test]]
name = "codec_integration"
path = "tests/integration/codec_tests.rs"

[[test]]
name = "context_isolation_integration"
path = "tests/integration/context_isolation_tests.rs"

[[test]]
name = "middleware_integration"
path = "tests/integration/middleware_tests.rs"

[[test]]
name = "pipeline_integration"
path = "tests/integration/pipeline_tests.rs"

[[test]]
name = "scope_local_integration"
path = "tests/integration/scope_local_tests.rs"

[[test]]
name = "stream_integration"
path = "tests/integration/stream_tests.rs"

[[test]]
name = "api_surface_integration"
path = "tests/integration/api_surface_tests.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "http-proto"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client", "grpc-tonic"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots-no-provider"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
tonic = { version = "0.14.1", default-features = false, optional = true }
