# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Rust SDK for NeMo Relay observability, scope management, and runtime instrumentation."
readme = "README.md"

[lints]
workspace = true

[features]
default = [
    "otel",
    "openinference",
    "guardrails-remote",
    "object-store",
]
atof-streaming = [
    "dep:futures-util",
    "dep:reqwest",
    "dep:rustls",
    "dep:tokio-tungstenite",
    "tokio/io-util",
    "tokio/net",
    "tokio/rt-multi-thread",
    "tokio/time",
]
schema = ["dep:schemars", "nemo-relay-types/schema"]
guardrails-remote = [
    "dep:reqwest",
    "dep:rustls",
]
object-store = [
    "dep:object_store",
    "dep:reqwest",
    "dep:rustls",
    "tokio/net",
    "tokio/time",
]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:reqwest",
    "dep:rustls",
    "dep:tonic",
]
openinference = [
    "dep:openinference-semantic-conventions",
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:reqwest",
    "dep:rustls",
    "dep:tonic",
]
worker-grpc = [
    "dep:nemo-relay-worker-proto",
    "dep:hyper-util",
    "dep:tower",
    "dep:tonic",
    "tokio-stream/net",
    "tonic/codegen",
    "tonic/router",
    "tonic/transport",
    "tokio/io-util",
    "tokio/net",
    "tokio/process",
    "tokio/rt-multi-thread",
]

[dependencies]
nemo-relay-types.workspace = true
nemo-relay-plugin.workspace = true
nemo-relay-worker-proto = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v7", "serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = { version = "0.9" }
schemars = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
thiserror = "2"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
typed-builder = "0.23.2"
futures-util = { version = "0.3", optional = true }
opentelemetry = { workspace = true, features = ["trace"], optional = true }
opentelemetry_sdk = { workspace = true, features = ["trace"], optional = true }
openinference-semantic-conventions = { version = "0.1.1", optional = true }
libloading = "0.8"
semver = "1"
sha2 = "0.11"
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client", "grpc-tonic"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots-no-provider", "stream"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
tonic = { version = "0.14.1", default-features = false, optional = true }
object_store = { version = "0.13", default-features = false, features = ["aws"], optional = true }
tokio-tungstenite = { version = "0.27", default-features = false, features = ["connect", "rustls-tls-native-roots"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "test-util", "rt-multi-thread", "time"] }
futures = "0.3"
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }
serde_json = "1"
object_store = { version = "0.13", default-features = false, features = ["aws"] }
tempfile = "3"

[[test]]
name = "codec_integration"
path = "tests/integration/codec_tests.rs"

[[test]]
name = "context_isolation_integration"
path = "tests/integration/context_isolation_tests.rs"

[[test]]
name = "native_plugin_integration"
path = "tests/integration/native_plugin_tests.rs"

[[test]]
name = "worker_plugin_integration"
path = "tests/integration/worker_plugin_tests.rs"
required-features = ["worker-grpc"]

[[test]]
name = "middleware_integration"
path = "tests/integration/middleware_tests.rs"

[[test]]
name = "pipeline_integration"
path = "tests/integration/pipeline_tests.rs"

[[test]]
name = "scope_local_integration"
path = "tests/integration/scope_local_tests.rs"

[[test]]
name = "stream_integration"
path = "tests/integration/stream_tests.rs"

[[test]]
name = "subscriber_dispatcher_integration"
path = "tests/integration/subscriber_dispatcher_tests.rs"

[[test]]
name = "api_surface_integration"
path = "tests/integration/api_surface_tests.rs"

[[test]]
name = "atif_storage_integration"
path = "tests/integration/atif_storage_tests.rs"
required-features = ["object-store"]
