# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-relay-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python native extension bindings for NeMo Relay built with PyO3."
readme = "README.md"

[lints]
workspace = true

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
nemo-relay = { workspace = true, features = ["atof-streaming", "otel", "openinference"] }
nemo-relay-adaptive = { workspace = true, features = ["redis-backend"] }
nemo-relay-pii-redaction.workspace = true
pyo3 = { version = "0.28.2", features = ["abi3", "abi3-py311", "experimental-inspect", "macros"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
pythonize = "0.28.0"
serde_json = "1"
serde = "1"
uuid = { workspace = true, features = ["v7"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chrono = "0.4"
